# birthday_reminders

./: .env  Dockerfile  Makefile  README.md  pyproject.toml
app/: contacts.py  lambda_handler.py  send_message.py  utils.py
docs/: diagram.py
tests/: test_utils.py  working_mocks.py
